# ollama-prefect-document-processing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pipeline/: main.py
