[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Marc F. Mezger <marc.mezger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.14.21"
ollama = "^0.1.6"
ultra-simple-config = "^0.1.0"
pypdfium2 = "^4.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
